--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                             Search Results Count panel 
             --------------------------------------------------------------->
             <div class="text-center mb-3">
-                <small>About <span id="result-count">00</span> Results Found</small>
+                <small>About <span id="result-count" class="fw-bold">00</span> Results Found</small>
             </div>
             <!-------------------------------------------------------------
                             Search Results Display panel 
